fix: text spacing

--- a/assets/styles/components/markdown.common.scss
+++ b/assets/styles/components/markdown.common.scss
@@ -53,13 +53,13 @@
     margin-bottom: 0;
   }
   h2{
-    margin-top:5rem;
+    margin-top:3.5rem;
   }
   h3{
-    margin-top:5rem;
+    margin-top:3.5rem;
   }
   h4{
-    margin-top:3rem;
+    margin-top:2.5rem;
   }
   h4 {
     font-style: italic;
